--- a/firmware/libs/pico-ssd1306/CMakeLists.txt
+++ b/firmware/libs/pico-ssd1306/CMakeLists.txt
@@ -2,15 +2,15 @@
 cmake_minimum_required(VERSION 3.13)
 
 # Define the library
-add_library(ssd1306 STATIC
+add_library(pico_ssd1306 STATIC
     ssd1306.c
 )
 
 # Include directories for the library
-target_include_directories(ssd1306 
-    PRIVATE ${CMAKE_CURRENT_LIST_DIR}
+target_include_directories(pico_ssd1306 
+    PUBLIC ${CMAKE_CURRENT_LIST_DIR}
     PRIVATE ${PICO_SDK_PATH}/src/rp2_common/hardware_i2c/include
 )
 
 # Link the Pico SDK libraries
-target_link_libraries(ssd1306 pico_stdlib)
+target_link_libraries(pico_ssd1306 pico_stdlib)
