--- a/firmware/.vscode/settings.json
+++ b/firmware/.vscode/settings.json
@@ -23,5 +23,8 @@
   },
   "cmake.generator": "Ninja",
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-  "cortex-debug.variableUseNaturalFormat": false
+  "cortex-debug.variableUseNaturalFormat": false,
+  "files.associations": {
+    "vector": "cpp"
+  }
 }
